--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,7 +113,7 @@
 .intro__content {
     position: relative;
     bottom: 12px;
-    width: 616px;
+    max-width: 616px;
     margin-bottom: 20px;
     margin-right: 74px;
 }
@@ -374,7 +374,7 @@
 
 .team__line {
     border: 1px solid #FF2D2D;
-    width: 134px;
+    max-width: 134px;
     max-height: 4px;
     margin-left: 0;
 }
@@ -389,7 +389,7 @@
 
 .team__selected-photo {
     flex-shrink: 0;
-    width: 322px;
+    max-width: 322px;
     height: 462px;
     margin-right: 66px;
     background-color: #FF3F40;
@@ -456,11 +456,12 @@
 }
 
 .members {
+    flex-wrap: wrap;
     display: flex;
     align-items: flex-end;
     margin-top: 18px;
     grid-column: 2 / 3;
-    grid-row: 2/ 3;
+    grid-row: 2 / 3;
 }
 
 .member {
@@ -688,7 +689,7 @@
 
 /*contacts*/
 
-.contacts {
+/*.contacts {
     color: #FFFFFF;
     box-sizing: border-box;
     position: relative;
@@ -714,6 +715,51 @@
     font-style: normal;
     line-height: 34px;
     margin-bottom: 27px;
+}*/
+
+.contacts {
+    box-sizing: border-box;
+    position: relative;
+    background-color: #2D2D2D;
+    padding: 126px 52px 126px 78px;
+    min-width: 580px;
+    min-height: 486px;
+}
+
+.contacts__heading {
+    color: #e0e0e0;
+    font-size: 42px;
+    margin-bottom: 18px;
+}
+
+.contacts__address {
+    line-height: 1.75;
+}
+
+.contacts__line {
+    margin: 0;
+    line-height: 1.75;
+    margin-bottom: 17px;
+}
+
+.feedback__right-box {
+    min-height: 498px;
+    flex: 1 1 auto;
+}
+
+.contacts__decor {
+    background-color: #2D2D2D;
+}
+
+.contacts::after {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(100%);
+    width: 100vw;
+    height: 100%;
+    background-color: #2C2C2C;
 }
 
 /*footer*/
@@ -743,4 +789,169 @@
 
 .footer__social-links>.footer__link:not(:last-child) {
     margin-right: 18px;
+}
+
+/*Responsiv*/
+
+@media screen and (max-width: 1286px) {
+    .intro {
+        flex-wrap: nowrap;
+    }
+
+    .intro__content {
+        width: 50%;
+        box-sizing: border-box;
+        margin-right: 0;
+        padding-right: 16px;
+    }
+
+    .intro__heading {
+        font-size: 5vw;
+    }
+
+    .intro__image {
+        width: 100%;
+        height: auto;
+    }
+
+    .products {
+        justify-content: flex-start;
+    }
+
+    .product {
+        max-width: 100%;
+        margin-right: 10px;
+    }
+
+    .feedback {
+        margin: 0;
+        margin-bottom: 30px;
+        padding: 0 1vw;
+        grid-column: 1 / 6;
+        grid-row: 1 / 2;
+    }
+
+    .feedback__body {
+        margin-right: 0;
+    }
+
+    .feedback-contacts {
+        flex-wrap: wrap;
+        padding-left: initial;
+        padding-right: initial;
+        padding-bottom: 0;
+        grid-template-columns: 100%;
+    }
+
+    .feedback__left-box {
+        flex: 0 1 auto;
+    }
+
+    .contacts {
+        width: 100%;
+        max-width: 100%;
+        grid-column: 1 / 6;
+        grid-row: 2 / 3;
+    }
+
+    .feedback-contacts::after {
+        content: initial;
+    }
+}
+
+@media screen and (max-width: 908px) {
+    .services__lead .services__blocks {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .subscribe__heading {
+        line-height: 50px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .products__item {
+        width: 100%;
+        text-align: center;
+    }
+
+    .service {
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 855px) {
+    .team__members {
+        grid-template-columns: 100%;
+        grid-template-columns: auto;
+    }
+
+    .team__selected-photo {
+        grid-row: 1 / 2;
+        margin-bottom: 18px;
+        margin-right: 0;
+    }
+
+    .team__selected-info {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+
+    .members {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .services__lead {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .services__blocks {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .contacts {
+        padding: 1vw;
+    }
+}
+
+@media screen and (max-width: 760px) {
+
+    .feedback__name,
+    .feedback__mail,
+    .feedback__message {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .feedback__name {
+        margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .header {
+        padding-left: 20px;
+    }
+
+    .intro {
+        flex-wrap: wrap;
+    }
+
+    .intro__content {
+        width: 100%;
+    }
+
+    .intro__link {
+        width: 100%;
+    }
+
+    .intro__heading {
+        font-size: 40px;
+    }
 }
