--- a/styles/styles.css
+++ b/styles/styles.css
@@ -927,3 +927,95 @@
         font-size: 40px;
     }
 }
+
+/*Popup-menu*/
+
+.popup-menu__button {
+    z-index: 1;
+    display: none;
+    padding: 0;
+    min-width: 140px;
+    height: 50px;
+    background-image: url('../images/burger-menu.svg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-color: #FFFFFF;
+}
+
+/*Скрыть не нужные элементы*/
+@media screen and (max-width:600px) {
+    .popup-menu__button {
+        display: block;
+    }
+
+    .menu {
+        border: 0;
+        clip: rect(0 0 0 0);
+        height: 1px;
+        margin: -1px;
+        overflow: hidden;
+        padding: 0;
+        position: absolute;
+        width: 1px;
+    }
+}
+
+.popup-menu {
+    position: relative;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+}
+
+.popup-menu__list {
+    visibility: visible;
+    position: absolute;
+    bottom: 0;
+    transform: translateY(100%);
+    z-index: 1;
+    min-width: 140px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: stretch;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background-color: #000000;
+    transition: visibility, transform 1s, 1s ease-in-out;
+}
+
+
+@media screen and (min-width: 600px) {
+    .popup-menu__list {
+        visibility: hidden;
+    }
+}
+
+.hide-popup {
+    transform: translateY(-50px);
+    z-index: -1;
+    visibility: hidden;
+}
+
+.popup-menu__item {
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    min-height: 90px;
+}
+
+.popup-menu__item:hover {
+    background-color: #FF3F40;
+}
+
+.popup-menu__link {
+    display: flex;
+    align-items: center;
+    padding: 0 30px;
+    color: #e0e0e0;
+    font-size: 14px;
+    font-weight: 700;
+    text-decoration: none;
+    text-transform: uppercase;
+}
