--- a/styles/styles.css
+++ b/styles/styles.css
@@ -169,11 +169,6 @@
     background-color: #FF2D2D;
 }
 
-.intro__image {
-    width: 554px;
-    height: 360px;
-}
-
 .section {
     display: flex;
     flex-wrap: wrap;
@@ -832,9 +827,12 @@
 }
 
 @media screen and (max-width: 908px) {
-    .services__lead .services__blocks {
+
+    .services__lead,
+    .services__blocks {
         width: 100%;
         max-width: 100%;
+        margin: 0 auto;
     }
 
     .subscribe__heading {
@@ -887,9 +885,7 @@
         max-width: 100%;
     }
 
-    .contacts {
-        padding: 1vw;
-    }
+    .contacts {}
 }
 
 @media screen and (max-width: 760px) {
@@ -916,15 +912,80 @@
     }
 
     .intro__content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         width: 100%;
     }
 
     .intro__link {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         width: 100%;
     }
 
-    .intro__heading {
-        font-size: 40px;
+    .intro__text {
+        text-align: center;
+    }
+
+    .section-heading {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+
+    .subscribe__text {
+        margin-bottom: 20px;
+    }
+
+    .service__heading {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .services__lead {
+        display: flex;
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .team__heder {
+        display: flex;
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .team__members {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .members {
+        justify-content: center;
+    }
+
+    .action-button_white {
+        margin-bottom: 60px;
+    }
+
+    .subscribe {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 54px;
+        margin-top: 40px;
+    }
+
+    .feedback {
+        text-align: center;
     }
 }
 
